--- a/gameplay.html
+++ b/gameplay.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>No-Cap - Spielen</title>
 
+    <!-- ✅ SECURITY: Security Headers -->
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+
     <!-- Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,19 +20,19 @@
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🧢</text></svg>">
 
-    <!-- P1 FIX: External CSS ONLY -->
+    <!-- ✅ SECURITY: External CSS ONLY (no inline styles) -->
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="/assets/css/gameplay.css">
 
-    <!-- P1 FIX: DOMPurify lokal gehostet -->
+    <!-- ✅ SECURITY: DOMPurify lokal gehostet -->
     <script src="/assets/lib/purify.min.js"></script>
 
-    <!-- Firebase SDK -->
-    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+    <!-- ✅ SECURITY: Firebase SDK with crossorigin -->
+    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js" crossorigin="anonymous"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js" crossorigin="anonymous"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js" crossorigin="anonymous"></script>
 
-    <!-- P1 FIX: Core Scripts in correct order -->
+    <!-- ✅ SECURITY: Core Scripts in correct dependency order -->
     <script src="/assets/js/firebase-init.js"></script>
     <script defer src="/assets/js/GameState.js"></script>
     <script defer src="/assets/js/utils.js"></script>
@@ -108,7 +112,7 @@
         </div>
 
         <!-- Results Section -->
-        <section class="results-section" id="results-section" style="display: none;" aria-labelledby="results-summary">
+        <section class="results-section hidden" id="results-section" aria-labelledby="results-summary">
             <div class="results-header">
                 <h2 class="results-summary" id="results-summary"></h2>
             </div>
@@ -126,7 +130,7 @@
         </section>
 
         <!-- Final Results Section -->
-        <section class="final-results-section" id="final-results-section" style="display: none;" aria-labelledby="final-title">
+        <section class="final-results-section hidden" id="final-results-section" aria-labelledby="final-title">
             <div class="final-header">
                 <h2 class="final-title" id="final-title">🏆 Spiel beendet!</h2>
                 <p class="final-subtitle">Hier sind die finalen Ergebnisse</p>
