--- a/category-selection.html
+++ b/category-selection.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>No-Cap - Kategorien wählen</title>
 
+    <!-- Security Headers -->
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+
     <!-- Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,20 +20,19 @@
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🧢</text></svg>">
 
-    <!-- P1 FIX: External CSS ONLY -->
+    <!-- ✅ SECURITY: External CSS ONLY (no inline styles) -->
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="/assets/css/category-selection.css">
 
-    <!-- P1 FIX: DOMPurify FIRST -->
-    <!-- Lokal gehostet - vermeidet CDN & Tracking Prevention Blocks -->
+    <!-- ✅ SECURITY: DOMPurify FIRST (must be available immediately) -->
     <script src="/assets/lib/purify.min.js"></script>
 
-    <!-- Firebase SDK -->
-    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+    <!-- ✅ SECURITY: Firebase SDK with crossorigin -->
+    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js" crossorigin="anonymous"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js" crossorigin="anonymous"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js" crossorigin="anonymous"></script>
 
-    <!-- P1 FIX: Core Scripts in correct order -->
+    <!-- ✅ SECURITY: Core Scripts in correct dependency order -->
     <script src="/assets/js/firebase-init.js"></script>
     <script defer src="/assets/js/GameState.js"></script>
     <script defer src="/assets/js/utils.js"></script>
@@ -120,8 +123,8 @@
                                     <span class="loading-dots">...</span>
                                 </span>
                         </div>
-                        <!-- P0 FIX: Locked Overlay (hidden by default) -->
-                        <div class="locked-overlay" id="fsk16-locked" style="display: none;" aria-hidden="true">
+                        <!-- ✅ CSP FIX: Use CSS class instead of inline style -->
+                        <div class="locked-overlay hidden" id="fsk16-locked" aria-hidden="true">
                             <div class="lock-icon">🔒</div>
                             <p class="lock-message">Nur für 16+ Jahre</p>
                         </div>
@@ -151,8 +154,8 @@
                                     <span class="loading-dots">...</span>
                                 </span>
                         </div>
-                        <!-- P0 FIX: Locked Overlay (hidden by default) -->
-                        <div class="locked-overlay" id="fsk18-locked" style="display: none;" aria-hidden="true">
+                        <!-- ✅ CSP FIX: Use CSS class instead of inline style -->
+                        <div class="locked-overlay hidden" id="fsk18-locked" aria-hidden="true">
                             <div class="lock-icon">🔒</div>
                             <p class="lock-message">Nur für Erwachsene (18+)</p>
                         </div>
@@ -194,8 +197,8 @@
                     </article>
                 </div>
 
-                <!-- Selection Summary -->
-                <div class="selection-summary" id="selection-summary" style="display: none;">
+                <!-- ✅ CSP FIX: Selection Summary with CSS class instead of inline style -->
+                <div class="selection-summary hidden" id="selection-summary">
                     <div class="summary-header">
                         <h3>✅ Ausgewählte Kategorien</h3>
                     </div>
