--- a/player-setup.html
+++ b/player-setup.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>No-Cap - Spieler hinzufügen</title>
 
+    <!-- ✅ SECURITY: Security Headers -->
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+
     <!-- Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,19 +20,19 @@
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🧢</text></svg>">
 
-    <!-- P1 FIX: External CSS ONLY -->
+    <!-- ✅ SECURITY: External CSS ONLY (no inline styles) -->
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="/assets/css/player-setup.css">
 
-    <!-- P1 FIX: DOMPurify lokal gehostet -->
+    <!-- ✅ SECURITY: DOMPurify lokal gehostet -->
     <script src="/assets/lib/purify.min.js"></script>
 
-    <!-- Firebase SDK -->
-    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+    <!-- ✅ SECURITY: Firebase SDK with crossorigin -->
+    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js" crossorigin="anonymous"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js" crossorigin="anonymous"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js" crossorigin="anonymous"></script>
 
-    <!-- P1 FIX: Core Scripts in correct order -->
+    <!-- ✅ SECURITY: Core Scripts in correct dependency order -->
     <script src="/assets/js/firebase-init.js"></script>
     <script defer src="/assets/js/GameState.js"></script>
     <script defer src="/assets/js/utils.js"></script>
@@ -90,12 +94,12 @@
                         <div class="player-input-row" role="listitem">
                             <div class="player-number" aria-hidden="true">1</div>
                             <input type="text" class="player-input" placeholder="Erster Spieler..." maxlength="15" data-index="0" aria-label="Spieler 1 Name" autocomplete="off">
-                            <button class="remove-player-btn" data-index="0" type="button" style="display: none;" aria-label="Spieler 1 entfernen">×</button>
+                            <button class="remove-player-btn hidden" data-index="0" type="button" aria-label="Spieler 1 entfernen">×</button>
                         </div>
                         <div class="player-input-row" role="listitem">
                             <div class="player-number" aria-hidden="true">2</div>
                             <input type="text" class="player-input" placeholder="Zweiter Spieler..." maxlength="15" data-index="1" aria-label="Spieler 2 Name" autocomplete="off">
-                            <button class="remove-player-btn" data-index="1" type="button" style="display: none;" aria-label="Spieler 2 entfernen">×</button>
+                            <button class="remove-player-btn hidden" data-index="1" type="button" aria-label="Spieler 2 entfernen">×</button>
                         </div>
                     </div>
 
@@ -107,7 +111,7 @@
                 </div>
 
                 <!-- Players Preview with Drag & Drop -->
-                <div class="players-preview" id="players-preview" style="display: none;">
+                <div class="players-preview hidden" id="players-preview">
                     <h3>🪑 Bitte passe die Reihenfolge nach der Sitzfolge an</h3>
                     <p class="reorder-hint">Halte einen Namen gedrückt und ziehe ihn an die richtige Position</p>
                     <div class="players-order" id="players-order" role="list" aria-label="Spielerreihenfolge"></div>
