--- a/multiplayer-lobby.html
+++ b/multiplayer-lobby.html
@@ -40,7 +40,7 @@
             referrerpolicy="no-referrer"></script>
 
     <!-- ✅ SECURITY: Core Scripts in correct dependency order -->
-    <script src="/assets/js/firebase-init.js"></script>
+    <script defer src="/assets/js/firebase-init.js"></script>
     <script defer src="/assets/js/GameState.js"></script>
     <script defer src="/assets/js/utils.js"></script>
     <script defer src="/assets/js/firebase-config.js"></script>
