--- a/multiplayer-category-selection.html
+++ b/multiplayer-category-selection.html
@@ -33,7 +33,7 @@
     <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js" crossorigin="anonymous"></script>
 
     <!-- ✅ SECURITY: Core Scripts in correct dependency order -->
-    <script src="/assets/js/firebase-init.js"></script>
+    <script defer src="/assets/js/firebase-init.js"></script>
     <script defer src="/assets/js/GameState.js"></script>
     <script defer src="/assets/js/utils.js"></script>
     <script defer src="/assets/js/firebase-config.js"></script>
