--- a/multiplayer-results.html
+++ b/multiplayer-results.html
@@ -34,8 +34,7 @@
 
     <!-- ✅ SECURITY: Core Scripts in correct dependency order -->
     <script defer src="/assets/js/firebase-init.js"></script>
-    <script defer src="/assets/js/GameState.js"></script>
-    <script defer src="/assets/js/utils.js"></script>
+    <script defer src="/assets/js/firebase-credentials.js"></script>
     <script defer src="/assets/js/firebase-config.js"></script>
     <script defer src="/assets/js/firebase-auth.js"></script>
     <script defer src="/assets/js/firebase-service.js"></script>
@@ -133,14 +132,5 @@
     <a href="privacy.html">Datenschutz</a>
 </footer>
 
-<!-- DOMPurify CDN -->
-<script src="/assets/lib/purify.min.js"
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"></script>
-
-<!-- Core Scripts in correct order -->
-<script src="/assets/js/GameState.js"></script>
-<script src="/assets/js/utils.js"></script>
-<script src="/assets/js/multiplayer-results.js"></script>
 </body>
 </html>
