--- a/difficulty-selection.html
+++ b/difficulty-selection.html
@@ -32,6 +32,9 @@
     <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js" crossorigin="anonymous"></script>
     <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js" crossorigin="anonymous"></script>
 
+    <!-- ✅ Firebase Configuration (MUST be loaded before firebase-config.js) -->
+    <script src="/assets/js/firebase-credentials.js"></script>
+
     <!-- ✅ SECURITY: Core Scripts in correct dependency order -->
     <script src="/assets/js/firebase-init.js"></script>
     <script defer src="/assets/js/GameState.js"></script>
